[package]
name = "sample-lines"
version = "1.2.0"
edition = "2021"
authors = ["Mike Stringer <mike.stringer.internet@gmail.com>"]
description = "Command-line tool to sample lines from a file or stdin without replacement. It runs in one pass without reading the whole input into memory using reservoir sampling."
license = "MIT"
repository = "https://github.com/stringertheory/sample"
categories = ["command-line-utilities"]
keywords = ["cli", "sampling", "analysis"]
exclude = ["/.github", "/target", "/*.log"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
codegen-units = 1
lto = "fat"

[[bin]]
name = "samp"
path = "src/main.rs"
